<resources>
    <string name="app_name">Base Android</string>
    <string name="empty_text" />
    <string name="ao">Omelchenko Aleksandr</string>
    <string name="flower">flower</string>
    <string name="change_image_button">Change Image</string>
    <string name="translation">Переведите слово яйцо:</string>
    <string name="letter_a">A</string>
    <string name="latter_o">O</string>
    <string name="letter_c">C</string>
    <string name="letter_h">H</string>
    <string name="letter_e">E</string>
    <string name="letter_g">G</string>
    <string name="letter_l">L</string>
    <string name="letter_p">P</string>
    <string name="min_up_button">Min Up</string>
    <string name="min_down_button">Min Down</string>
    <string name="hour_down_button">Hour Doun</string>
    <string name="hour_up_button">Hour Up</string>
    <string name="hour_0">0</string>
    <string name="min_0">0</string>
    <string name="hint_your_login_edit_text">your login</string>
    <string name="hint_your_password_edit_text">your password</string>
    <string name="register_text_view">Register</string>
    <string name="login_button">Login</string>
    <string name="press_name_text_view">Press name:</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>

    <string-array name="items">
        <item>doctor</item>
        <item>milk</item>
        <item>factor</item>
        <item>image</item>
        <item>second</item>
        <item>list</item>
        <item>friend</item>
        <item>girl</item>
    </string-array>

</resources>
