<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/description_task_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translation" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/letter_a"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="onClick"/>

        <Button
            android:text="@string/latter_o"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_c"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_h"
            android:layout_column="3"
            android:layout_row="0"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_e"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_c"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_g"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_a"
            android:layout_column="3"
            android:layout_row="1"
            android:onClick="onClick"/>

        <Button
            android:text="@string/latter_o"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_g"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_l"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="onClick"/>

        <Button
            android:text="@string/letter_p"
            android:layout_column="3"
            android:layout_row="2"
            android:onClick="onClick"/>

    </GridLayout>

</LinearLayout>